# SOBQ-code

./: .gitignore  .mxproject  .tasks.py.swp  CMakeLists.txt  FindCMSIS.cmake  Makefile  README.md  TestNucleo.ioc  dockerenv.code-workspace  tasks.py
Core/: CMakeLists.txt
Core/Inc/: main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
Core/Src/: gpio.c  main.c  stm32f4xx_it.c
Core/TestSrc/: CMakeLists.txt  template.c
